--- a/lti_consumer/consumer/templates/consumer/show_testcase.html
+++ b/lti_consumer/consumer/templates/consumer/show_testcase.html
@@ -73,6 +73,8 @@ This template shows a testcase and its launch parameters.
                     <a class="btn btn-success action-big" href="{% url 'consumer.views.edit_testcase' testcase_id=testcase.id %}" role="button">{% trans "Edit" %}</a>
 
                     <a class="btn btn-warning action-big" href="{% url 'consumer.views.delete_testcase' testcase_id=testcase.id %}" role="button">{% trans "Delete" %}</a>
+                    <a class="btn btn-success action-big" href="{% url 'consumer.views.copy_testcase' testcase_id=testcase.id %}" role="button">{% trans "Copy" %}</a>
+
                 </div>
             <br /><br />
             {% if launch_url %}</form>{% endif %}
